--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -13,6 +13,9 @@
 	<body align="center">
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
 			<!-- Logo Banner -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">			
 					@@include( "modules/logo-banners/templates/template.html", {
@@ -23,6 +26,9 @@
 			</tr>
 
 			<!-- Email Heading -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -35,7 +41,7 @@
 							<td class="content h-flush">
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_mobile-one-column">
 									<tr>
-										<td class="column" style="width: 220px;">
+										<td class="column padded" style="width: 240px;">
 											<h1 class="sans margin-b-16">Engage @ Lazard</h1>
 											
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
@@ -69,8 +75,14 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 
 			<!-- CTA Banner (1) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -154,8 +166,14 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 
 			<!-- Two Column Content - Full Content -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "clarity"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -169,14 +187,14 @@
 								<table style cellpadding="8px" cellspacing="0" class="w-100" role="presentation">
 									<tr class="layout_two-column">
 										<td class="column">
-											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block"> -->
-											<img style src="https://placehold.co/264x148" alt="First Column Feature image" width="263" border="0" class="d-block">
+											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Field.png" alt="First Column Feature image" width="260" border="0" class="d-block"> -->
+											<img style src="https://placehold.co/260x148" alt="First Column Feature image" width="260" border="0" class="d-block">
 																						
 											<h4 class="sans margin-b-8 margin-t-16">Aaron Binsted appears on Livewire Markets' The Pitch</h4>
 											
 											<h3 class="subheadline margin-b-8">Tuesday, October 31, 1:00PM eT</h3>
 											
-											<p style="width: 193px;" class="d-block paragraph-2 margin-b-16">Aaron Binsted, Portfolio Manager / Analyst on the Australian Equity team, joins Livewire Markets' The Pitch to discuss Australia's big banks and three potential opportunities.</p>
+											<p class="d-block paragraph-2 margin-b-16">Aaron Binsted, Portfolio Manager / Analyst on the Australian Equity team, joins Livewire Markets' The Pitch to discuss Australia's big banks and three potential opportunities.</p>
 			
 											<h3 class="subheadline margin-b-8">Australia</h3>
 											
@@ -277,14 +295,14 @@
 											<a href="https://www.lazardassetmanagement.com" class="btn text margin-t-16">Read more <span>&#8594;</span></a>
 										</td>
 										<td class="column">
-											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block"> -->
-											<img style src="https://placehold.co/264x148" alt="Second Column Feature image" width="263" border="0" class="d-block">
+											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="260" border="0" class="d-block"> -->
+											<img style src="https://placehold.co/260x148" alt="Second Column Feature image" width="260" border="0" class="d-block">
 											
 											<h4 class="sans margin-b-8 margin-t-16">Fund in Focus with Warryn Robertson</h4>
 											
 											<h3 class="subheadline margin-b-8">Tuesday, October 31, 1:00PM eT</h3>
 											
-											<p style="width: 193px;" class="d-block paragraph-2 margin-b-16">Warryn Robertson, Portfolio Manager/Analyst on the Global Listed Infrastructure team, delves into the major trends in infrastructure, highlights key holdings within the portfolio, and outlines the team’s meticulous process for identifying attractive investment opportunities. Warryn also shares the rationale behind why the Lazard Global Listed Infrastructure Fund is now available as a dual-access Active ETF.</p>
+											<p class="d-block paragraph-2 margin-b-16">Warryn Robertson, Portfolio Manager/Analyst on the Global Listed Infrastructure team, delves into the major trends in infrastructure, highlights key holdings within the portfolio, and outlines the team’s meticulous process for identifying attractive investment opportunities. Warryn also shares the rationale behind why the Lazard Global Listed Infrastructure Fund is now available as a dual-access Active ETF.</p>
 			
 											<h3 class="subheadline margin-b-8">Australia</h3>
 											
@@ -406,7 +424,7 @@
 							<td class="content h-flush">
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
-										<td class="column" style="width: 404px;">
+										<td class="column padded" style="width: 404px;">
 											<h2 class="sans">Annual Sustainable Investment Report</h2>
 										</td>
 										<td class="column">
@@ -470,8 +488,14 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "clarity"
+			} )
 
 			<!-- CTA Banner (3) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -484,7 +508,7 @@
 							<td class="content h-flush">
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
-										<td class="column" style="width: 404px;">
+										<td class="column padded" style="width: 404px;">
 											<!--
 												Component: Eyebrow
 											-->
@@ -548,6 +572,9 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 
 			<!-- One Column Contents - Graph -->
 			<tr>
@@ -579,8 +606,14 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 
 			<!-- CTA Banner (4) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -624,9 +657,18 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 
 			<!-- Footer + Disclaimer -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "onyx"
+			} )
 			@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
+			@@include( "components/spacers/templates/template.html", {
+				variant: "onyx"
+			} )
 		</table>
 	</body>
 </html>
