--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -12,6 +12,9 @@
 	<body align="center">
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
 			<!-- Logo Banner -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">			
 					@@include( "modules/logo-banners/templates/template.html", {
@@ -23,6 +26,9 @@
 			<!-- END Logo Banner -->
 
 			<!-- Email Banner, One Column -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/email-banner/one-column/templates/template.html", {
@@ -31,6 +37,9 @@
 					} )
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<!-- END Email Banner, One Column -->
 
 			<!-- Email Heading, One Column -->
@@ -46,8 +55,8 @@
 							<td class="content h-flush">
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
-										<td class="column" style="width: 404px;">
-											<h1 class="sans margin-b-16" style="width: 165px;">Lazard Connect</h1>
+										<td class="column padded" style="width: 404px;">
+											<h1 class="sans margin-b-16">Lazard Connect</h1>
 											
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
@@ -82,6 +91,9 @@
 			<!-- END Email Heading, One Column -->
 
 			<!-- Three Column Content (1) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -94,12 +106,12 @@
 							<td class="content h-flush">
 								<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 									<tr class="layout_three-column">
-										<td style="width: 107px;" class="column">
+										<td style="width: 107px;" class="column padded">
 											<h3 class="sans margin-b-16">What's trending</h3>
 											
 											<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
 										</td>
-										<td class="column">
+										<td class="column padded">
 											<h4 class="sans margin-b-16">In praise of small language models</h4>
 											
 											<p class="paragraph-2 margin-b-16">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
@@ -208,9 +220,15 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<!-- END Three Column Content (1) -->
 
 			<!-- Three Column Content (2) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sage"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -223,12 +241,12 @@
 							<td class="content h-flush">
 								<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 									<tr class="layout_three-column">
-										<td style="width: 107px;" class="column">
+										<td style="width: 107px;" class="column padded">
 											<h3 class="sans margin-b-16">What's trending</h3>
 											
 											<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
 										</td>
-										<td class="column">
+										<td class="column padded">
 											<h4 class="sans margin-b-16">In praise of small language models</h4>
 											
 											<p class="paragraph-2 margin-b-16">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
@@ -337,9 +355,15 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sage"
+			} )
 			<!-- END Three Column Content (1) -->
 
 			<!-- One Column Content, Shift Right -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/one-column-contents/shift-right/templates/template.html", {
@@ -350,6 +374,9 @@
 			<!-- END One Column Content, Shift Right -->
 
 			<!-- One Column Content, Graph -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -381,9 +408,15 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<!-- END One Column Content, Graph -->
 
 			<!-- CTA Banner (1) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sage"
+			} )
 			<tr>
 				<td align="center">
 					<!--
@@ -438,9 +471,15 @@
 					} )
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sage"
+			} )
 			<!-- END Three Column Content, Large Thumbnail -->
 
 			<!-- CTA Banner (2) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
@@ -450,10 +489,19 @@
 					} )
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<!-- END CTA Banner (2) -->
 
 			<!-- Footer + Disclaimer -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "onyx"
+			} )
 			@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
+			@@include( "components/spacers/templates/template.html", {
+				variant: "onyx"
+			} )
 			<!-- END Footer + Disclaimer -->
 		</table>
 	</body>
