--- a/src/components/spacers/templates/template.html
+++ b/src/components/spacers/templates/template.html
@@ -1,13 +1,17 @@
 <!--
-	Module: Two Column Footer Disclaimer
-	Variant: Onyx
+	Module: Spacer
+	Variant: @@variant
 -->
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
-	<tr>
-		<td class="frame"></td>
-		<td class="content spacer">
-			
-		</td>
-		<td class="frame"></td>
-	</tr>
-</table>
+<tr>
+	<td align="center">
+		<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
+			<tr>
+				<td class="frame"></td>
+				<td class="content spacer">
+					
+				</td>
+				<td class="frame"></td>
+			</tr>
+		</table>
+	</td>
+</tr>
