--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -12,6 +12,9 @@
 	<body align="center">
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
 			<!-- Logo Banner -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/logo-banners/templates/template.html", {
@@ -21,8 +24,11 @@
 				</td>
 			</tr>
 			<!-- END Logo Banner -->
-
+			
 			<!-- Email Banner, Two Column -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/email-banner/two-column/templates/template.dark.html", {
@@ -31,9 +37,15 @@
 					} )
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<!-- END Email Banner, Two Column -->
 
 			<!-- Table, Basic -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/tables/basic/templates/template.html", {
@@ -41,9 +53,15 @@
 					} )
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "parchment"
+			} )
 			<!-- END Table, Basic -->
 
 			<!-- CTA Banner (1) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "clarity"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/cta-banner/two-column/templates/template.html", {
@@ -86,9 +104,15 @@
 					</table>
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "clarity"
+			} )
 			<!-- END Table, Thumbnail -->
 
 			<!-- CTA Banner (1) -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
@@ -98,9 +122,15 @@
 					} )
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "sapphire"
+			} )
 			<!-- END CTA Banner (1) -->
 
 			<!-- Footer + Disclaimer -->
+			@@include( "components/spacers/templates/template.html", {
+				variant: "onyx"
+			} )
 			<tr>
 				<td align="center">
 					@@include( "modules/footer-disclaimer/two-column/templates/template.html", {
@@ -108,6 +138,9 @@
 					} )
 				</td>
 			</tr>
+			@@include( "components/spacers/templates/template.html", {
+				variant: "onyx"
+			} )
 			<!-- END Footer + Disclaimer -->
 		</table>
 	</body>
