--- a/src/modules/one-column-contents/shift-right/templates/template.html
+++ b/src/modules/one-column-contents/shift-right/templates/template.html
@@ -12,7 +12,7 @@
 					<td class="column shift-right-md">
 						<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 						
-						<h2 class="sans margin-b-16">One chart you need to see</h2>
+						<h2 class="margin-b-16">One chart you need to see</h2>
 						
 						<p class="paragraph-2 margin-b-16">
 							<strong>Is Manufacturing Shifting from China to India?</strong>
