--- a/src/modules/email-banner/two-column/templates/template.html
+++ b/src/modules/email-banner/two-column/templates/template.html
@@ -9,7 +9,7 @@
 			<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
 					<td style="" class="column padded margin-b-16">
-						<h1 class="sans margin-b-16">Factor Report</h1>
+						<h1 class="margin-b-16">Factor Report</h1>
 						<p class="margin-b-16">Monthly analysis of global market factors</p>
 
 						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
