--- a/src/modules/one-column-contents/basic/templates/template.onyx.html
+++ b/src/modules/one-column-contents/basic/templates/template.onyx.html
@@ -11,7 +11,7 @@
 			-->
 			<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 			
-			<h3 class="sans margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h3>
+			<h3 class="margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h3>
 			
 			<h2 class="subheadline margin-b-16">Emerging Markets Investment Grade Yields</h2>
 			
