recommit for netlify build

--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -60,7 +60,7 @@
 								-->
 								<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">Emerging Market Monitor</span></p>
 								
-								<h2 class="sans margin-b-8">Is manufacturing shifting from China to India?</h2>
+								<h2 class="margin-b-8">Is manufacturing shifting from China to India?</h2>
 								
 								<p class="disclaimer">As of 26 October 2023</p>
 								<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
@@ -116,7 +116,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
-								<h2 class="sans margin-b-16">Explore a New Perspective on AI from Our Team</h2>
+								<h2 class="margin-b-16">Explore a New Perspective on AI from Our Team</h2>
 								
 								<p class="d-block paragraph-2 margin-b-16">This paper explores the investment applications of small language models and their advantages over large language models.</p>
 								
