--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -96,7 +96,7 @@
 								<table style="width: 100%" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid">
 									<tr>
 										<td class="column" style="width: 404px;">
-											<h3 class="sans">Introducing Lazard Global Listed Infrastructure Active ETF <span class="nowrap">(Cboe: GIFL)</span></h3>	
+											<h3 class="">Introducing Lazard Global Listed Infrastructure Active ETF <span class="nowrap">(Cboe: GIFL)</span></h3>	
 										</td>
 										<td class="column align-right-md">
 											<!--
@@ -425,7 +425,7 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column padded" style="width: 404px;">
-											<h2 class="sans">Annual Sustainable Investment Report</h2>
+											<h2 class="">Annual Sustainable Investment Report</h2>
 										</td>
 										<td class="column">
 											<!--
@@ -474,7 +474,7 @@
 											<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 										</td>
 										<td>
-											<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+											<h4 class="margin-b-16">Annual Sustainable Investment Report</h4>
 											
 											<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 											
@@ -514,7 +514,7 @@
 											-->
 											<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">Fixed Income Viewpoints</span></p>
 											
-											<h2 class="sans">The Plot Thickens</h2>
+											<h2 class="">The Plot Thickens</h2>
 										</td>
 										<td class="column">
 											<!--
