--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -56,7 +56,7 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column padded" style="width: 404px;">
-											<h1 class="sans margin-b-16">Lazard Connect</h1>
+											<h1 class="margin-b-16">Lazard Connect</h1>
 											
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
@@ -392,7 +392,7 @@
 								-->
 								<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">Your Team</span></p>
 								
-								<h3 class="sans margin-b-16">Investment Grade Corporate and Sovereign Yields Are Eye-Catching</h3>
+								<h3 class="margin-b-16">Investment Grade Corporate and Sovereign Yields Are Eye-Catching</h3>
 								
 								<h2 class="subheadline margin-b-16">Emerging Markets Investment Grade Yields</h2>
 								
@@ -429,8 +429,8 @@
 							<td class="content h-flush">
 								<table style="width: 100%;" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid">
 									<tr>
-										<td class="column" style="width: 404px;">
-											<h3 class="sans">Explore a New Perspective on AI from Our Team</h3>
+										<td class="column padded" style="width: 404px;">
+											<h3 class="">Explore a New Perspective on AI from Our Team</h3>
 										</td>
 										<td class="column align-right-md">
 											<!--
@@ -484,7 +484,7 @@
 				<td align="center">
 					@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
 						variant: "sapphire",
-						heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
+						heading: "<h2 class=''>Explore a New Perspective on AI from Our Team</h2>",
 						paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 					} )
 				</td>
