--- a/src/templates/fixed-income-viewpoint.html
+++ b/src/templates/fixed-income-viewpoint.html
@@ -56,7 +56,7 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column padded" style="width: 404px;">
-											<h1 class="sans">Fixed Income Viewpoints</h1>
+											<h1 class="">Fixed Income Viewpoints</h1>
 										</td>
 										<td class="column align-right-md">
 											<!--
