--- a/src/modules/footer-disclaimer/one-column/templates/template.html
+++ b/src/modules/footer-disclaimer/one-column/templates/template.html
@@ -24,7 +24,9 @@
 						
 						<p class="disclaimer margin-b-16">Read our Privacy Notice for information about how we use personal data that we hold on you.</p>
 						
-						<p class="disclaimer">To Unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
+						<p class="disclaimer margin-b-16">To Unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
+
+						<p class="disclaimer" style="float: right;">{{my.cscode}}</p>
 					</td>
 				</tr>
 			</table>
