--- a/src/modules/two-column-contents/image-left/templates/template.dark.onyx.html
+++ b/src/modules/two-column-contents/image-left/templates/template.dark.onyx.html
@@ -19,7 +19,7 @@
 						<p class="disclaimer">Source: Lazard, JP Morgan</p>
 					</td>
 					<td style class="column">
-						<h class="sans margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h4>
+						<h4 class="sans margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h4>
 						
 						<h3 class="subheadline margin-b-16">Tuesday, October 31, 1:00PM eT</h3>
 						
