--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -33,6 +33,8 @@
 
 		<div class="nav">
 			<a href="#components">Components</a>
+			<a href="#subjectline">Subject Line</a>
+			<a href="#preheaders">Preheaders</a>
 			<a href="#logo-banners">Logo Banners</a>
 			<a href="#email-banner_one-column">One Column Email Banners</a>
 			<a href="#email-banner_two-column">Two Column Email Banners</a>
