--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -33,6 +33,15 @@
 
 			<tr>
 				<td align="center">
+					@@include( 'modules/preheaders/templates/template.html', {
+						variant: "sage",
+						"label": "<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aliquid reprehenderit esse perspiciatis reiciendis illum, veniam dolore dignissimos. Vitae illo tempora voluptatum earum labore laudantium voluptas nisi possimus ullam culpa?</p>"
+					} )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
 					@@include( "modules/cta-banner/one-column/templates/template.dark.html", {
 						variant: "sapphire",
 						heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
