--- a/src/modules/footer-disclaimer/two-column/templates/template.html
+++ b/src/modules/footer-disclaimer/two-column/templates/template.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 				<tr class="layout_mobile-one-column">
-					<td style="width: 54px;" class="column padded nowrap">
+					<td style="width: 54px;" class="column nowrap">
 						<a target="_blank" href="https://{{my.Footer LinkedIn URL}}" style="text-decoration: none;">
 							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn" width="16px" height="16px">
 						</a>
@@ -42,6 +42,8 @@
 								</td>
 							</tr>
 						</table>
+
+						<p class="disclaimer margin-t-16" style="float: right;">{{my.cscode}}</p>
 					</td>
 				</tr>
 			</table>
