--- a/src/modules/preheaders/templates/template.two-line.html
+++ b/src/modules/preheaders/templates/template.two-line.html
@@ -1,13 +1,14 @@
 <!--
-	Module: Preheader
+	Module: Preheader - Two Line
 	Variant: @@variant
 -->
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
 		<td class="frame"></td>
-		<td style="border: 0;" class="content center">
-			@@label
+		<td class="content">
+			<h3>@@header</h3>
+			<p class="paragraph-2">@@subtext</p>
 		</td>
-		<td  class="frame"></td>
+		<td class="frame"></td>
 	</tr>
 </table>
