--- a/src/modules/thumbnail-grid/templates/template.html
+++ b/src/modules/thumbnail-grid/templates/template.html
@@ -6,10 +6,10 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<h4 class="center margin-b-16">Subscribe to Our Flagship Insights</h4>
+			<h3 class="center margin-b-16">Subscribe to Our Flagship Insights</h3>
 			
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
-				<tr class="layout_two-column">
+				<tr class="layout_two-column margin-b-16-md">
 					<td style="" class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
 						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
